--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Contoh narasi berisi fakta:
 
 
     
-        <a href="http://localhost/latihan/latihan_heading.html">Halaman Heading</a>
+        <a href="https://htmlku.netlify.app/latihan_heading.html">Halaman Heading</a>
 
         <h1 style="border:2px solid Tomato;">Hello World</h1>
         <h1 style="border:2px solid DodgerBlue;">Hello World</h1>
